2000-05-11  NotZed  <NotZed@HelixCode.com>

	* camel-mime-part.c (write_to_stream): Unref the filter after
	adding it to the filtering stream.

	* providers/mbox/camel-mbox-summary.c
	(camel_mbox_summary_finalise): Free the folder path.

	* camel-folder-summary.c (camel_folder_summary_finalise): Free the
	summary path.

	* camel-internet-address.c (internet_decode): Free multiple entry
	addresses properly.

	* camel-mime-utils.c (header_decode_mailbox): Plugged another
	memleak, free text after converting it.
	(header_decode_addrspec): More leaks plugged.

	* camel-mime-message.c (finalize): Free message_uid.
	(finalize): Free the recipients hashtable.

2000-05-11    <notzed@helixcode.com>

	* camel-folder-summary.c (camel_folder_summary_finalise): Free
	summary items and charset filters.

2000-05-10    <notzed@helixcode.com>

	* camel-folder-summary.c (camel_folder_summary_finalise): Don't
	free stuff in p, after we've free'd p.

	* providers/mbox/camel-mbox-folder.c (mbox_append_message): Unref
	the stream we created for appending.

2000-05-10  Jeffrey Stedfast  <fejj@stampede.org>

	* providers/smtp/camel-smtp-transport.c: (camel_smtp_transport_class_init):
	Added initialization for service_class

2000-05-10  Dan Winship  <danw@helixcode.com>

	* camel-multipart.c (write_to_stream): fix a stupid typo. Thank
	you, C.

	* camel-mime-part.c (write_to_stream): don't ref the stream before
	wrapper a filter around it, since nothing will ever unref it.

2000-05-10  Christopher James Lahey  <clahey@helixcode.com>

	* Makefile.am: Added camel-types.h, camel-folder-pt-proxy.h, and
	camel-thread-proxy.h.

2000-05-09  Dan Winship  <danw@helixcode.com>

	* providers/sendmail/camel-sendmail-transport.c (_send_internal):
	Bleah. Can't fsync a pipe. As a quick kludge, just don't
	stream_flush it. The right fix will require bringing back
	stream_close though.

2000-05-09  Jeffrey Stedfast  <fejj@stampede.org>
	* camel-internet-address.[c,h]: Undid my changes (moved